Getting closer. I should just get the rest of the css done tonight and worry about the huge data bog down tomorrow or something.

--- a/instructions/chart-sample.html
+++ b/instructions/chart-sample.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Chart.js Sample - http://www.chartjs.org/docs/ -->
-  <script src='http://www.chartjs.org/docs/Chart.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
 </head>
 <body>
   <canvas id='myChart' width='400' height='100'></canvas>
